# graphics-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  imgui.ini
assets/shaders/: box_fragment.glsl  fragment.glsl  vertex.glsl
include/: cubemap.h  elementbuffer.h  framebuffer.h  mesh.h  model.h  renderer.h  sampler.h  shader.h  texture.h  vertexarray.h  vertexbuffer.h  window.h
include/glad/: glad.h
res/: fragment.glsl  fragmentImage.glsl  fragmentLight.glsl  fragmentRed.glsl  fragmentYellow.glsl  vertex.glsl  vertexImage.glsl  vertexLight.glsl
src/: cubemap.cpp  framebuffer.cpp  glad.c  hello.cpp  main.cpp  mesh.cpp  model.cpp  renderer.cpp  sampler.cpp  shader.cpp  texture.cpp  window.cpp
